--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "@types/react-big-calendar": "^1.16.3",
+    "dotenv": "^17.2.4",
     "moment": "^2.30.1",
     "next": "14.2.5",
+    "pg": "^8.18.0",
     "react": "^18",
     "react-big-calendar": "^1.19.4",
     "react-calendar": "^6.0.0",
@@ -22,12 +26,14 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.33",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "prisma": "^7.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
